feat: add native FBS module to mobile app